<resources>
    <string name="app_name">silab</string>
    <string name="hello_world">This is where character will be rendered</string>
    <string name="action_settings">Settings</string>
    <string name="emoji_selection_title">Choose your emoji!</string>
    <string name="emoji_string_textview">Input you\'re emoji</string>
    <string name="string_input_title">Input your message!</string>
    <string name="button_render_text">Emojify!</string>
    <string name="button_share_text">Share</string>
    <string name="button_enter_text">Ent</string>
    <string name="button_delete_text">Del</string>
    <string name="error_no_map">Your message includes characters not yet featured.</string>
    <string name="error_no_input">Please confirm that you\'ve input a message.</string>
    <string name="error_file_open">Can\'t seem to open a file, so, um, that suck\'s</string>
    <string name="error_no_emoji_chosen">Please select your emoji first.</string>
    <string name="button_ok">OK</string>
    <string name="button_string">Text</string>
    <string name="button_image">Image</string>
    <string name="message_share">How would you like to share your masterpiece?</string>
</resources>
