<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:background="#FFFFFFFF">

        <TextView
            android:id="@+id/render_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFFFF"
            android:text="@string/hello_world"
            android:textIsSelectable="false"
            android:textSize="16sp"/>

    </ScrollView>

    <TextView
        android:id="@+id/pattern_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="openInput"
        android:paddingLeft="12dp"
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_input_title"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="render"
            android:padding="8dp"
            android:text="@string/button_render_text"
            android:textAllCaps="false"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="shareText"
            android:padding="8dp"
            android:text="@string/button_share_text"
            android:textAllCaps="false"
            android:textSize="32sp"/>

    </LinearLayout>

</LinearLayout>
