<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <TextView
        android:id="@+id/emoji_string_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="24sp"
        android:padding="8dp"
        android:text="@string/emoji_string_textview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">

        <GridView
            android:id="@+id/emoji_keyboard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </GridView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/emoji_string_delete"
                android:text="@string/button_delete_text"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/emoji_string_enter"
                android:text="@string/button_enter_text"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>